basic table format added

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <title>Document</title>
 </head>
 <body>
+    <table>
+        <th>Pike Store</th>
+        <table id="pike"></table>
 
-    <h1>Pike Store</h1>
-    <ul id="pike"></ul>
+        <th>Sea Tac Store</th>
+        <table id="seaTac"></table>
 
-    <h1>Sea Tac Store</h1>
-    <ul id="seaTac"></ul>
+        <th>Seattle Center Store</th>
+        <table id="seattleCen"></table>
 
-    <h1>Seattle Center Store</h1>
-    <ul id="seattleCen"></ul>
+        <th>Capitol Hill Store</th>
+        <table id="capitolHill"></table>
 
-    <h1>Capitol Hill Store</h1>
-    <ul id="capitolHill"></ul>
+        <th>Alki Store</th>
+        <table id="alki"></table>
 
-    <h1>Alki Store</h1>
-    <ul id="alki"></ul>
-
-
+    </table>
 
     <script src="js/app.js"></script>
 </body>
