added sales.html page, added addastore form, minimal css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav class="top">
+            <ul>
+                <li><a href="Home"></a>Home</li>
+                <li><a href="Shops"></a>Shops</li>
+                <li><a href="About Us"></a>About Us</li>
+                <li><a href="Location"></a>Find a Location</li>
+            </ul>
+        </nav>
+    </header>
     <table>
         <th>Pike Store</th>
         <table id="pike"></table>
@@ -26,6 +36,21 @@
 
     </table>
 
+<fieldset> 
+<form>
+    <h3>Add a Shop</h3>
+    <label>Shop Name:</label>
+    <input type="text" name="id" size="20"><br>
+    <label>Minimum Customers</label>
+    <input type="text" name="minCustomers" size="20"><br>
+    <label>Maximum Customers</label>
+    <input type="text" name="maxCustomers" size="20"><br>
+    <label>Average Cookies Per Customer</label>
+    <input type="text" name="cookieAverage" size="20"><br>
+</form>
+</fieldset>
+
     <script src="js/app.js"></script>
+
 </body>
 </html>
