add total rows and columns

--- a/sales.html
+++ b/sales.html
@@ -11,20 +11,33 @@
 
     <table>
         <th>Pike Store</th>
-        <table id="pike"></table>
+        <tr id="pike"></tr>
 
         <th>Sea Tac Store</th>
-        <table id="seaTac"></table>
+        <tr id="seaTac"></tr>
 
         <th>Seattle Center Store</th>
-        <table id="seattleCen"></table>
+        <tr id="seattleCen"></tr>
 
         <th>Capitol Hill Store</th>
-        <table id="capitolHill"></table>
+        <tr id="capitolHill"></tr>
 
         <th>Alki Store</th>
-        <table id="alki"></table>
+        <tr id="alki"></tr>
 
     </table>
+    <fieldset> 
+            <form>
+                <h3>Add a Shop</h3>
+                <label>Shop Name:</label>
+                <input type="text" name="id" size="20"><br>
+                <label>Minimum Customers</label>
+                <input type="text" name="minCustomers" size="20"><br>
+                <label>Maximum Customers</label>
+                <input type="text" name="maxCustomers" size="20"><br>
+                <label>Average Cookies Per Customer</label>
+                <input type="text" name="cookieAverage" size="20"><br>
+            </form>
+            </fieldset>
     </body>
 </html>
