--- a/index.html
+++ b/index.html
@@ -9,46 +9,25 @@
 </head>
 <body>
     <header>
-        <nav class="top">
+
+        <nav id="main-navbar">
             <ul>
                 <li><a href="Home"></a>Home</li>
                 <li><a href="Shops"></a>Shops</li>
                 <li><a href="About Us"></a>About Us</li>
                 <li><a href="Location"></a>Find a Location</li>
+                <li><a href="sales.html"></a>Sales</li>
             </ul>
         </nav>
     </header>
     <table>
-        <th>Pike Store</th>
-        <table id="pike"></table>
-
-        <th>Sea Tac Store</th>
-        <table id="seaTac"></table>
-
-        <th>Seattle Center Store</th>
-        <table id="seattleCen"></table>
-
-        <th>Capitol Hill Store</th>
-        <table id="capitolHill"></table>
-
-        <th>Alki Store</th>
-        <table id="alki"></table>
-
+        <thead></thead>
+        <tbody></tbody>
+        <tfoot></tfoot>
+        
     </table>
 
-<fieldset> 
-<form>
-    <h3>Add a Shop</h3>
-    <label>Shop Name:</label>
-    <input type="text" name="id" size="20"><br>
-    <label>Minimum Customers</label>
-    <input type="text" name="minCustomers" size="20"><br>
-    <label>Maximum Customers</label>
-    <input type="text" name="maxCustomers" size="20"><br>
-    <label>Average Cookies Per Customer</label>
-    <input type="text" name="cookieAverage" size="20"><br>
-</form>
-</fieldset>
+
 
     <script src="js/app.js"></script>
 
