added images and css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -20,12 +21,8 @@
             </ul>
         </nav>
     </header>
-    <table>
-        <thead></thead>
-        <tbody></tbody>
-        <tfoot></tfoot>
-        
-    </table>
+    <img src="https://github.com/DeltaVCode/cr-201d4/blob/master/class-06/lab/assets/salmon.png">
+    <img src=""
 
 
 
