--- a/sales.html
+++ b/sales.html
@@ -5,39 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" rel="stylesheet">
+    <script defer src="js/app.js"></script>
     <title>Document</title>
 </head>
 <body>
+<header>
+        <nav id="main-navbar">
+                <ul>
+                    <li><a href="Home"></a>Home</li>
+                    <li><a href="Shops"></a>Shops</li>
+                    <li><a href="About Us"></a>About Us</li>
+                    <li><a href="Location"></a>Find a Location</li>
+                    <li><a href="sales.html"></a>Sales</li>
+                </ul>
+            </nav>
 
-    <table>
-        <th>Pike Store</th>
-        <tr id="pike"></tr>
+</header>
+        <table id="sales-data">
+                <thead></thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                
+            </table>
 
-        <th>Sea Tac Store</th>
-        <tr id="seaTac"></tr>
-
-        <th>Seattle Center Store</th>
-        <tr id="seattleCen"></tr>
-
-        <th>Capitol Hill Store</th>
-        <tr id="capitolHill"></tr>
-
-        <th>Alki Store</th>
-        <tr id="alki"></tr>
-
-    </table>
-    <fieldset> 
-            <form>
+            <form id='newshop'>
+                    <fieldset> 
                 <h3>Add a Shop</h3>
                 <label>Shop Name:</label>
-                <input type="text" name="id" size="20"><br>
+                <input type="text" id='name' size="20"><br>
                 <label>Minimum Customers</label>
-                <input type="text" name="minCustomers" size="20"><br>
+                <input type="text" id="minCustomers" size="20"><br>
                 <label>Maximum Customers</label>
-                <input type="text" name="maxCustomers" size="20"><br>
+                <input type="text" id="maxCustomers" size="20"><br>
                 <label>Average Cookies Per Customer</label>
-                <input type="text" name="cookieAverage" size="20"><br>
-            </form>
+                <input type="text" id="cookieAverage" size="20"><br>
+                <input type="submit" value="Add a Shop"><br>
             </fieldset>
+            </form>
     </body>
+
 </html>
